Fix body overflow property to prevent horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    overflow-x: hidden;
+    overflow: hidden !important;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-weight: normal;
